# dns-util

./: .gitignore  Cargo.toml  compile_asm.md  hello  keylog_file  shell.s
shell-code/: Cargo.toml  shellcode.ld
shell-code/.cargo/: config
shell-code/src/: main.rs
src/: dns.test  http.rs  lib.rs  main.rs
