[package]
name = "dns-util"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
libc = "0.2.101"
rand = "0.8.4"
serde = "1.0.130"
structopt = "0.3.23"
tokio = {version = "1.11.0", features = ["full"]}
tokio-rustls = "0.22.0"
url = "2.2.2"
webpki-roots = "0.21.0"
